--- a/package.json
+++ b/package.json
@@ -54,18 +54,18 @@
     "arktype": "^2.1.25"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.3",
+    "@biomejs/biome": "2.3.11",
     "@changesets/cli": "^2.29.7",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@prisma/client": "^6.18.0",
-    "@tilli-pro/biome": "^0.8.0",
+    "@tilli-pro/biome": "0.9.0",
     "@types/node": "^24.10.0",
     "lefthook": "^2.0.2",
     "pkgroll": "^2.20.1",
-    "prisma": "^6.18.0",
-    "tsx": "^4.20.6",
+    "prisma": "7.2.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vitest": "^2.1.9"
+    "vitest": "^4.0.16"
   }
 }
