--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,5 +41,11 @@
     "moduleDetection": "force",
     "skipLibCheck": true
   },
-  "exclude": ["vitest.config.ts", "dist", "prisma", "__tests__"]
+  "exclude": [
+    "vitest.config.ts",
+    "prisma.config.ts",
+    "dist",
+    "prisma",
+    "__tests__"
+  ]
 }
