--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
+      - name: Create .env file
+        run: echo "DATABASE_URL=''" > .env
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
