--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Create .env file
         run: echo "DATABASE_URL=''" > .env
 
+      - name: Verify .env exists
+        run: cat .env
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
