--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: pnpm build
 
       - name: Generate Prisma schemas
-        run: pnpm exec prisma generate
+        run: DATABASE_URL=postgres pnpm exec prisma generate
 
       - name: Run tests
         run: pnpm test
