--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 env:
-  DATABASE_URL: ""
+  DATABASE_URL: "postgres"
 
 jobs:
   test:
@@ -48,7 +48,7 @@ jobs:
         run: pnpm build
 
       - name: Generate Prisma schemas
-        run: DATABASE_URL=postgres pnpm exec prisma generate
+        run: pnpm exec prisma generate
 
       - name: Run tests
         run: pnpm test
