--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 24.x
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -43,17 +43,6 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Build
-        run: pnpm build
-
-      - name: Generate Prisma schemas
-        run: pnpm exec prisma generate
-        env:
-          DATABASE_URL: "postgres"
-
-      - name: Run tests
-        run: pnpm test
-
       - name: Setup npm for publishing
         run: |
           echo "//registry.npmjs.org/:_authToken=" >> ~/.npmrc
@@ -63,7 +52,7 @@ jobs:
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: npm run release
+          publish: pnpm release
           commit: "chore: version packages"
           title: "chore: version packages"
         env:
