--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
-    "@changesets/cli": "^2.29.7",
+    "@changesets/cli": "2.29.8",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "@prisma/client": "^6.18.0",
