--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "./runtime/filters": {
       "import": "./dist/runtime/filters.js",
       "types": "./dist/runtime/filters.d.ts"
+    },
+    "./runtime/buffer": {
+      "import": "./dist/runtime/buffer.js",
+      "types": "./dist/runtime/buffer.d.ts"
+    },
+    "./runtime/uint8array": {
+      "import": "./dist/runtime/uint8array.js",
+      "types": "./dist/runtime/uint8array.d.ts"
     }
   },
   "bin": {
@@ -57,12 +65,15 @@
     "@prisma/generator-helper": "^6.18.0",
     "arktype": "^2.1.25"
   },
+  "peerDependencies": {
+    "@prisma/client": ">=6"
+  },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
     "@changesets/cli": "2.29.8",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "7.2.0",
     "@tilli-pro/biome": "0.9.0",
     "@types/node": "^24.10.0",
     "lefthook": "^2.0.2",
