--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
     inputs:
       update_baseline:
-        description: 'Update baseline after run'
+        description: "Update baseline after run"
         required: false
         type: boolean
         default: false
@@ -39,18 +39,30 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Full history for baseline comparison
+          fetch-depth: 0 # Full history for baseline comparison
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: 'pnpm'
+          node-version: 20
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 10
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -62,7 +74,7 @@ jobs:
         run: |
           # Run with increased memory and GC access
           NODE_OPTIONS="--max-old-space-size=4096 --expose-gc" pnpm bench
-        continue-on-error: true  # Don't fail the workflow, just report
+        continue-on-error: true # Don't fail the workflow, just report
 
       - name: Compare with baseline
         id: compare
